# SimpleRSSAggregator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: helpers.rs  main.rs  structs.rs
