[package]
name = "SyndicationJunction"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
regex = "1.9.3"
reqwest = "0.11.18"
serde = { version = "1.0.183", features = [ "derive" ] }
quick-xml = { version = "0.28.2", features = ["serialize"] }
serde_json = "1.0.105"
substring = "1.4.5"
tokio = { version = "1.31.0", features = ["full"] }
