[package]
name = "syndication_junction"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
regex = "1.9.3"
reqwest = { version = "0.11.18", features = [ "stream" ] }
serde = { version = "1.0.183", features = [ "derive" ] }
quick-xml = { version = "0.28.2", features = ["serialize"] }
serde_json = "1.0.105"
substring = "1.4.5"
tokio = { version = "1.31.0", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.20"
futures-util = "0.3.28"
scraper = "0.17.1"
urlencoding = "2.1.3"
